// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  width: 100%;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-animation: animation-0 2000ms ease infinite;
  animation: animation-0 2000ms ease infinite;
}

<main
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
        />
      </svg>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App 2`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  width: 100%;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  -webkit-animation: animation-0 2000ms ease infinite;
  animation: animation-0 2000ms ease infinite;
}

<main
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
        />
      </svg>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App 3`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-2 {
  width: 100%;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  -webkit-animation: animation-0 2000ms ease infinite;
  animation: animation-0 2000ms ease infinite;
}

.emotion-0 {
  min-height: 100vh;
  width: 100%;
  padding: 3rem;
  box-sizing: border-box;
}

@media (max-width:460px) {
  .emotion-0 {
    padding: 1rem;
  }
}

<main
    class="emotion-2"
  >
    <section
      class="emotion-0"
      style="display: none;"
    />
    <div
      class="emotion-1"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
        />
      </svg>
    </div>
  </main>
</DocumentFragment>
`;

exports[`App 4`] = `
<DocumentFragment>
  .emotion-10 {
  width: 100%;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  min-height: 100vh;
  width: 100%;
  padding: 3rem;
  box-sizing: border-box;
}

@media (max-width:460px) {
  .emotion-9 {
    padding: 1rem;
  }
}

.emotion-3 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
}

.emotion-2 {
  -webkit-appearance: none;
  color: rgb(0,0,0);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  font-size: 12px;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 100;
  position: relative;
  white-space: nowrap;
  line-height: 0;
  width: auto;
  min-width: 160px;
  background: rgb(255,255,255);
  outline: none;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(234,234,234);
  border-image: initial;
  overflow: hidden;
  -webkit-transition: border 0.2s ease 0s,background 0.2s ease 0s,color 0.2s ease-out 0s,box-shadow 0.2s ease 0s;
  transition: border 0.2s ease 0s,background 0.2s ease 0s,color 0.2s ease-out 0s,box-shadow 0.2s ease 0s;
  border-radius: 4px;
}

.emotion-0 {
  height: 100%;
  box-shadow: none;
  color: rgb(0,0,0);
  line-height: 40;
  font-size: 14px;
  margin-right: -20px;
  width: calc(100% + 20px);
  text-transform: none;
  border-width: initial;
  border-style: none;
  border-color: initial;
  border-image: initial;
  background: none transparent;
  padding: 0px 76px 0px 16px;
  outline: none;
}

.emotion-1 {
  width: 30px;
  height: 100%;
  position: absolute;
  right: 0;
  pointer-events: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-left: 1px solid rgb(234,234,234);
  background: rgb(255,255,255);
  -webkit-transition: border 0.2s ease 0s;
  transition: border 0.2s ease 0s;
}

.emotion-7 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  display: inline-block;
  padding: 1rem 3rem;
  width: auto;
  position: relative;
  background-color: white;
  color: black;
}

.emotion-4 {
  background: none;
  border: none;
  color: black;
  cursor: pointer;
  position: absolute;
  top: .5rem;
  right: .5rem;
  outline: none;
}

.emotion-5 {
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
  margin-bottom: .5rem;
}

.emotion-6 {
  font-size: .8rem;
  font-weight: lighter;
  margin: 0;
}

.emotion-8 {
  margin: 1rem 0 0 3rem;
}

<main
    class="emotion-10"
  >
    <section
      class="emotion-9"
      style=""
    >
      <div
        class="emotion-3"
      >
        <form>
          <label
            for="filter"
          >
            Highlight employees with title: 
          </label>
          <div
            class="emotion-2"
          >
            <select
              aria-label="Select a filter"
              class="emotion-0"
              id="filter"
              name="filter"
            >
              <option
                value=""
              >
                -- Select an title --
              </option>
              <option
                value="CEO"
              >
                CEO
              </option>
            </select>
            <div
              class="emotion-1"
            >
              <svg
                aria-label="arrow double"
                fill="none"
                height="17"
                viewBox="0 0 7 12"
                width="7"
              >
                <path
                  d="M0.642491 3.35053L0.292945 3.70804L1.00798 4.40714L1.35752 4.04962L0.642491 3.35053ZM3.75752 1.59491L4.10707 1.23739L3.39204 0.538299L3.04249 0.895815L3.75752 1.59491ZM5.58506 4.04651L5.93149 4.40704L6.65256 3.71417L6.30613 3.35364L5.58506 4.04651ZM3.95354 0.9053L3.6071 0.544767L2.88604 1.23763L3.23247 1.59817L3.95354 0.9053ZM1.35752 7.95041L1.00797 7.59289L0.292938 8.29198L0.642485 8.6495L1.35752 7.95041ZM3.04248 11.1042L3.39203 11.4617L4.10706 10.7626L3.75751 10.4051L3.04248 11.1042ZM6.36054 8.64636L6.70697 8.28583L5.98591 7.59296L5.63947 7.95349L6.36054 8.64636ZM3.28688 10.4018L2.94045 10.7624L3.66152 11.4552L4.00795 11.0947L3.28688 10.4018ZM1.35752 4.04962L3.75752 1.59491L3.04249 0.895815L0.642491 3.35053L1.35752 4.04962ZM6.30613 3.35364L3.95354 0.9053L3.23247 1.59817L5.58506 4.04651L6.30613 3.35364ZM0.642485 8.6495L3.04248 11.1042L3.75751 10.4051L1.35752 7.95041L0.642485 8.6495ZM5.63947 7.95349L3.28688 10.4018L4.00795 11.0947L6.36054 8.64636L5.63947 7.95349Z"
                  fill="#000"
                />
              </svg>
            </div>
          </div>
        </form>
      </div>
      <div>
        <div
          class="emotion-7"
          id="1560137100000"
        >
          <button
            aria-label="Add new employee under John Doe"
            class="emotion-4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
          <h2
            class="emotion-5"
          >
            John Doe
          </h2>
          <h3
            class="emotion-6"
          >
            Title: 
            <strong>
              CEO
            </strong>
          </h3>
        </div>
        <section
          class="emotion-8"
        />
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`App 5`] = `
<DocumentFragment>
  .emotion-10 {
  width: 100%;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  min-height: 100vh;
  width: 100%;
  padding: 3rem;
  box-sizing: border-box;
}

@media (max-width:460px) {
  .emotion-9 {
    padding: 1rem;
  }
}

.emotion-3 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
}

.emotion-2 {
  -webkit-appearance: none;
  color: rgb(0,0,0);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  font-size: 12px;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 100;
  position: relative;
  white-space: nowrap;
  line-height: 0;
  width: auto;
  min-width: 160px;
  background: rgb(255,255,255);
  outline: none;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(234,234,234);
  border-image: initial;
  overflow: hidden;
  -webkit-transition: border 0.2s ease 0s,background 0.2s ease 0s,color 0.2s ease-out 0s,box-shadow 0.2s ease 0s;
  transition: border 0.2s ease 0s,background 0.2s ease 0s,color 0.2s ease-out 0s,box-shadow 0.2s ease 0s;
  border-radius: 4px;
}

.emotion-0 {
  height: 100%;
  box-shadow: none;
  color: rgb(0,0,0);
  line-height: 40;
  font-size: 14px;
  margin-right: -20px;
  width: calc(100% + 20px);
  text-transform: none;
  border-width: initial;
  border-style: none;
  border-color: initial;
  border-image: initial;
  background: none transparent;
  padding: 0px 76px 0px 16px;
  outline: none;
}

.emotion-1 {
  width: 30px;
  height: 100%;
  position: absolute;
  right: 0;
  pointer-events: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-left: 1px solid rgb(234,234,234);
  background: rgb(255,255,255);
  -webkit-transition: border 0.2s ease 0s;
  transition: border 0.2s ease 0s;
}

.emotion-7 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  display: inline-block;
  padding: 1rem 3rem;
  width: auto;
  position: relative;
  background-color: white;
  color: black;
}

.emotion-4 {
  background: none;
  border: none;
  color: black;
  cursor: pointer;
  position: absolute;
  top: .5rem;
  right: .5rem;
  outline: none;
}

.emotion-5 {
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
  margin-bottom: .5rem;
}

.emotion-6 {
  font-size: .8rem;
  font-weight: lighter;
  margin: 0;
}

.emotion-8 {
  margin: 1rem 0 0 3rem;
}

<main
    class="emotion-10"
  >
    <section
      class="emotion-9"
      style=""
    >
      <div
        class="emotion-3"
      >
        <form>
          <label
            for="filter"
          >
            Highlight employees with title: 
          </label>
          <div
            class="emotion-2"
          >
            <select
              aria-label="Select a filter"
              class="emotion-0"
              id="filter"
              name="filter"
            >
              <option
                value=""
              >
                -- Select an title --
              </option>
              <option
                value="CEO"
              >
                CEO
              </option>
            </select>
            <div
              class="emotion-1"
            >
              <svg
                aria-label="arrow double"
                fill="none"
                height="17"
                viewBox="0 0 7 12"
                width="7"
              >
                <path
                  d="M0.642491 3.35053L0.292945 3.70804L1.00798 4.40714L1.35752 4.04962L0.642491 3.35053ZM3.75752 1.59491L4.10707 1.23739L3.39204 0.538299L3.04249 0.895815L3.75752 1.59491ZM5.58506 4.04651L5.93149 4.40704L6.65256 3.71417L6.30613 3.35364L5.58506 4.04651ZM3.95354 0.9053L3.6071 0.544767L2.88604 1.23763L3.23247 1.59817L3.95354 0.9053ZM1.35752 7.95041L1.00797 7.59289L0.292938 8.29198L0.642485 8.6495L1.35752 7.95041ZM3.04248 11.1042L3.39203 11.4617L4.10706 10.7626L3.75751 10.4051L3.04248 11.1042ZM6.36054 8.64636L6.70697 8.28583L5.98591 7.59296L5.63947 7.95349L6.36054 8.64636ZM3.28688 10.4018L2.94045 10.7624L3.66152 11.4552L4.00795 11.0947L3.28688 10.4018ZM1.35752 4.04962L3.75752 1.59491L3.04249 0.895815L0.642491 3.35053L1.35752 4.04962ZM6.30613 3.35364L3.95354 0.9053L3.23247 1.59817L5.58506 4.04651L6.30613 3.35364ZM0.642485 8.6495L3.04248 11.1042L3.75751 10.4051L1.35752 7.95041L0.642485 8.6495ZM5.63947 7.95349L3.28688 10.4018L4.00795 11.0947L6.36054 8.64636L5.63947 7.95349Z"
                  fill="#000"
                />
              </svg>
            </div>
          </div>
        </form>
      </div>
      <div>
        <div
          class="emotion-7"
          id="1560137100000"
        >
          <button
            aria-label="Add new employee under John Doe"
            class="emotion-4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
          <h2
            class="emotion-5"
          >
            John Doe
          </h2>
          <h3
            class="emotion-6"
          >
            Title: 
            <strong>
              CEO
            </strong>
          </h3>
        </div>
        <section
          class="emotion-8"
        />
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`App 6`] = `
<DocumentFragment>
  .emotion-15 {
  width: 100%;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-14 {
  min-height: 100vh;
  width: 100%;
  padding: 3rem;
  box-sizing: border-box;
}

@media (max-width:460px) {
  .emotion-14 {
    padding: 1rem;
  }
}

.emotion-3 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
}

.emotion-2 {
  -webkit-appearance: none;
  color: rgb(0,0,0);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  font-size: 12px;
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 100;
  position: relative;
  white-space: nowrap;
  line-height: 0;
  width: auto;
  min-width: 160px;
  background: rgb(255,255,255);
  outline: none;
  border-width: 1px;
  border-style: solid;
  border-color: rgb(234,234,234);
  border-image: initial;
  overflow: hidden;
  -webkit-transition: border 0.2s ease 0s,background 0.2s ease 0s,color 0.2s ease-out 0s,box-shadow 0.2s ease 0s;
  transition: border 0.2s ease 0s,background 0.2s ease 0s,color 0.2s ease-out 0s,box-shadow 0.2s ease 0s;
  border-radius: 4px;
}

.emotion-0 {
  height: 100%;
  box-shadow: none;
  color: rgb(0,0,0);
  line-height: 40;
  font-size: 14px;
  margin-right: -20px;
  width: calc(100% + 20px);
  text-transform: none;
  border-width: initial;
  border-style: none;
  border-color: initial;
  border-image: initial;
  background: none transparent;
  padding: 0px 76px 0px 16px;
  outline: none;
}

.emotion-1 {
  width: 30px;
  height: 100%;
  position: absolute;
  right: 0;
  pointer-events: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-left: 1px solid rgb(234,234,234);
  background: rgb(255,255,255);
  -webkit-transition: border 0.2s ease 0s;
  transition: border 0.2s ease 0s;
}

.emotion-7 {
  background: white;
  border-radius: .5em;
  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.12);
  box-sizing: border-box;
  padding: 2rem;
  width: 100%;
  display: inline-block;
  padding: 1rem 3rem;
  width: auto;
  position: relative;
  background-color: white;
  color: black;
}

.emotion-4 {
  background: none;
  border: none;
  color: black;
  cursor: pointer;
  position: absolute;
  top: .5rem;
  right: .5rem;
  outline: none;
}

.emotion-5 {
  font-size: 1rem;
  font-weight: bold;
  margin: 0;
  margin-bottom: .5rem;
}

.emotion-6 {
  font-size: .8rem;
  font-weight: lighter;
  margin: 0;
}

.emotion-12 {
  margin: 1rem 0 0 3rem;
}

<main
    class="emotion-15"
  >
    <section
      class="emotion-14"
      style=""
    >
      <div
        class="emotion-3"
      >
        <form>
          <label
            for="filter"
          >
            Highlight employees with title: 
          </label>
          <div
            class="emotion-2"
          >
            <select
              aria-label="Select a filter"
              class="emotion-0"
              id="filter"
              name="filter"
            >
              <option
                value=""
              >
                -- Select an title --
              </option>
              <option
                value="CEO"
              >
                CEO
              </option>
              <option
                value="Software Engineer"
              >
                Software Engineer
              </option>
            </select>
            <div
              class="emotion-1"
            >
              <svg
                aria-label="arrow double"
                fill="none"
                height="17"
                viewBox="0 0 7 12"
                width="7"
              >
                <path
                  d="M0.642491 3.35053L0.292945 3.70804L1.00798 4.40714L1.35752 4.04962L0.642491 3.35053ZM3.75752 1.59491L4.10707 1.23739L3.39204 0.538299L3.04249 0.895815L3.75752 1.59491ZM5.58506 4.04651L5.93149 4.40704L6.65256 3.71417L6.30613 3.35364L5.58506 4.04651ZM3.95354 0.9053L3.6071 0.544767L2.88604 1.23763L3.23247 1.59817L3.95354 0.9053ZM1.35752 7.95041L1.00797 7.59289L0.292938 8.29198L0.642485 8.6495L1.35752 7.95041ZM3.04248 11.1042L3.39203 11.4617L4.10706 10.7626L3.75751 10.4051L3.04248 11.1042ZM6.36054 8.64636L6.70697 8.28583L5.98591 7.59296L5.63947 7.95349L6.36054 8.64636ZM3.28688 10.4018L2.94045 10.7624L3.66152 11.4552L4.00795 11.0947L3.28688 10.4018ZM1.35752 4.04962L3.75752 1.59491L3.04249 0.895815L0.642491 3.35053L1.35752 4.04962ZM6.30613 3.35364L3.95354 0.9053L3.23247 1.59817L5.58506 4.04651L6.30613 3.35364ZM0.642485 8.6495L3.04248 11.1042L3.75751 10.4051L1.35752 7.95041L0.642485 8.6495ZM5.63947 7.95349L3.28688 10.4018L4.00795 11.0947L6.36054 8.64636L5.63947 7.95349Z"
                  fill="#000"
                />
              </svg>
            </div>
          </div>
        </form>
      </div>
      <div>
        <div
          class="emotion-7"
          id="1560137100000"
        >
          <button
            aria-label="Add new employee under John Doe"
            class="emotion-4"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
              />
            </svg>
          </button>
          <h2
            class="emotion-5"
          >
            John Doe
          </h2>
          <h3
            class="emotion-6"
          >
            Title: 
            <strong>
              CEO
            </strong>
          </h3>
        </div>
        <section
          class="emotion-12"
        >
          <div>
            <div
              class="emotion-7"
              id="1560137160000"
            >
              <button
                aria-label="Add new employee under John Wick"
                class="emotion-4"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                  />
                </svg>
              </button>
              <h2
                class="emotion-5"
              >
                John Wick
              </h2>
              <h3
                class="emotion-6"
              >
                Title: 
                <strong>
                  Software Engineer
                </strong>
              </h3>
            </div>
            <section
              class="emotion-12"
            />
          </div>
        </section>
      </div>
    </section>
  </main>
</DocumentFragment>
`;
